--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ services:
 #  - npm install
 
 script:
-  - docker run -it frumania/uiveri5-base:latest bash
-  - sleep 10
-  - visualtest --v
+  - docker run --name myslave frumania/uiveri5-base:latest
+  - docker ps
+  - sleep 30
+  - docker ps
+  - docker exec -d myslave sh -c "echo a && echo b"
+  - docker exec -d myslave visualtest --v
