--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ services:
 #  - npm install
 
 script:
-  - docker run --name myslave frumania/uiveri5-base:latest
+  - docker run --name myslave -it frumania/uiveri5-base:latest bash
+  - exit
   - docker ps
   - sleep 30
   - docker ps
