--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ services:
 #  - npm install
 
 script:
-  - docker run --name myslave -it frumania/uiveri5-base:latest bash
-  - exit
+  - docker run --name myslave frumania/uiveri5-base:latest
   - docker ps
-  - sleep 30
+  - sleep 10
   - docker ps
-  - docker exec -d myslave sh -c "echo a && echo b"
+  - docker exec -d myslave /opt/selenium/startSeleniumServer.sh
+  - sleep 10
   - docker exec -d myslave visualtest --v
