--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ services:
 #  - npm install
 
 script:
-  - docker run --name myslave frumania/uiveri5-base:latest
+  - docker run --name myslave -dit frumania/uiveri5-base:latest /bin/bash
   - docker ps
   - sleep 10
   - docker ps
-  - docker exec -d myslave /opt/selenium/startSeleniumServer.sh
+  - docker exec myslave /opt/selenium/startSeleniumServer.sh
   - sleep 10
-  - docker exec -d myslave visualtest --v
+  - docker exec myslave visualtest --v
