--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
   - docker ps
   - docker exec -d myslave /opt/selenium/startSeleniumServer.sh
   - docker exec myslave ls
-  - docker exec myslave bash -c "cd /test/test && visualtest --v --seleniumAddress http://localhost:4444/wd/hub"
-  - docker exec myslave bash -c "cd /test/test && visualtest --v"
+  - docker exec myslave bash -c "cd /test/test && visualtest --v --seleniumAddress http://localhost:4444/wd/hub --config '{"auth": {"sapcloud-form": {"user": "info@frumania.com","pass": "J#6i/{%lY+]."}}'"
+  - docker exec myslave bash -c "cd /test/test && visualtest --v --config '{"auth": {"sapcloud-form": {"user": "$user","pass": "$password"}}'"
