--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
   - docker ps
   - docker exec -d myslave /opt/selenium/startSeleniumServer.sh
   - docker exec myslave ls
-  - docker exec myslave bash -c "cd /test/test && test1.sh"
-  - docker exec myslave bash -c "cd /test/test && test2.sh"
+  - docker exec myslave bash -c "cd /test/test && ./test1.sh"
+  - docker exec myslave bash -c "cd /test/test && ./test2.sh"
