--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 install:
-- docker build -t uiveri5:latest .
+- docker build -t uiveri5-base:latest .
  
 #before_script:
 #  - npm install
@@ -14,7 +14,7 @@ install:
 script:
   - ls -l
   - pwd
-  - docker run --name myslave -e user=$user -e password=$password -v $PWD:/test/ -dit uiveri5:latest /bin/bash
+  - docker run --name myslave -e user=$user -e password=$password -v $PWD:/test/ -dit uiveri5-base:latest /bin/bash
   - docker ps
   - sleep 10
   - docker ps
