--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ script:
   - docker ps
   - docker exec -d myslave /opt/selenium/startSeleniumServer.sh
   - sleep 10
+  - docker exec -ti myslave bash -c "apt-get update"
   - docker exec -d myslave bash -c "cd /test/test && ./test1.sh"
   - docker exec -d myslave bash -c "cd /test/test && ./test2.sh"
