--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 script:
   - ls -l
   - pwd
-  - docker run --name myslave -e user=$user -e password=$password -v $PWD:/test/ -v /var/run/docker.sock:/var/run/docker.sock -dit uiveri5-base:latest /bin/bash
+  - docker run --name myslave -e user=$user -e password=$password -v /usr/bin/docker:/usr/bin/docker -v $PWD:/test/ -v /var/run/docker.sock:/var/run/docker.sock -dit uiveri5-base:latest /bin/bash
   - docker ps
   - sleep 10
   - docker ps
