--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - cd test/shared/results/reports
   - ls
   - echo "run test"
-  - docker exec myslave bash -c "cd /test/test && ./test2.sh"
+  - docker exec -d myslave bash -c "cd /test/test && ./test2.sh"
   - sleep 60
   - cd test/shared/results/reports
   - ls
