--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,11 @@ script:
   - sleep 10
   - docker exec -d myslave bash -c "cd /test/test && ./test1.sh"
   - sleep 60
-  - cd test/shared/results/reports
-  - ls
+  - ls test/shared/results/reports
   - rm -R test/shared/results/reports
-  - cd test/shared/results/
-  - ls
+  - ls test/shared/results/
   - echo "check files"
   - docker exec -d myslave bash -c "cd /test/test && ./test2.sh"
   - sleep 60
-  - cd test/shared/results/reports
-  - ls
+  - ls test/shared/results/reports
   - echo "check files"
