--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,7 @@ script:
   - sleep 10
   - docker exec -d myslave bash -c "cd /test/test && ./test1.sh"
   - sleep 60
-  - ls test/shared/results/reports
-  - echo "check files"
+  - ./test/check.sh
   - docker exec -d myslave bash -c "cd /test/test && ./test2.sh"
   - sleep 60
-  - ls test/shared/results/reports
-  - echo "check files"
+  - ./test/check.sh
