--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ script:
   - docker ps
   - docker exec -d myslave /opt/selenium/startSeleniumServer.sh
   - sleep 10
-  - docker exec -d myslave bash -c "cd /test/test && ./test1.sh"
-  - sleep 60
-  - ./test/check.sh
-  - docker exec -d myslave bash -c "cd /test/test && ./test2.sh"
-  - sleep 60
-  - ./test/check.sh
+  #- docker exec -d myslave bash -c "cd /test/test && ./test1.sh"
+  #- sleep 60
+  #- ./test/check.sh
+  #- docker exec -d myslave bash -c "cd /test/test && ./test2.sh"
+  #- sleep 60
+  #- ./test/check.sh
